feat : chapter 03 refactoring