@@ -1,27 +1,12 @@
-buildscript {
-    repositories {
-        mavenCentral()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-    dependencies {
-        classpath("io.freefair.gradle:lombok-plugin:5.1.0")
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootGradlePluginVersion")
-        classpath("io.spring.gradle:dependency-management-plugin:1.0.9.RELEASE")
-        classpath("gradle.plugin.org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.9.0")
-        classpath("net.saliman:gradle-cobertura-plugin:3.0.0")
-        //classpath("gradle.plugin.com.ewerk.gradle.plugins:querydsl-plugin:1.0.10")
-    }
+plugins {
+    id 'java'
+    id 'org.springframework.boot' version '3.4.4'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
 allprojects {
-    apply plugin: 'com.github.kt3k.coveralls'
-    apply plugin: 'jacoco'
-    apply plugin: "io.freefair.lombok"
-    apply plugin: 'project-report'
     repositories {
-        jcenter()
+        mavenCentral()
     }
 }
 
@@ -31,73 +16,15 @@ subprojects {
     version = '0.0.1-SNAPSHOT'
 
     apply plugin: 'java'
-    apply plugin: 'idea'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
-    apply plugin: 'com.github.kt3k.coveralls'
-    //apply plugin: "com.ewerk.gradle.plugins.querydsl"
+
     repositories {
         mavenCentral()
     }
 
-    tasks.withType(JavaCompile).each {
-        it.options.compilerArgs.add('--enable-preview')
-    }
-
-    test {
-        jvmArgs(['--enable-preview'])
-    }
-
     dependencies {
-        compile group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
-        compile group: 'ch.qos.logback', name: 'logback-core', version: "${logbackVersion}"
-        compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-        compile group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.25'
-        compile group: 'org.jetbrains', name: 'annotations', version: '16.0.1'
-        compile group: 'javax.inject', name: 'javax.inject', version: '1'
-        compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.7'
-        compile group: 'org.jooq', name: 'jool', version: '0.9.14'
-        compile group: 'javax.validation', name: 'validation-api', version: '2.0.0.Final'
-        compileOnly group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
-        testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '2.1'
-        testCompile group: 'org.mockito', name: 'mockito-core', version: '2.25.1'
-        testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '2.25.1'
-        annotationProcessor group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
-
-        compileOnly group: 'org.projectlombok', name: 'lombok', version: "${lombokVersion}"
-        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: "${lombokVersion}"
-        testCompileOnly group: 'org.projectlombok', name: 'lombok', version: "${lombokVersion}"
-        testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: "${lombokVersion}"
-    }
-
-    dependencyManagement {
-        imports {
-            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-        }
-    }
-
-    sourceCompatibility = JavaVersion.VERSION_15
-    targetCompatibility = JavaVersion.VERSION_15
-
-    compileTestJava {
-        sourceCompatibility = JavaVersion.VERSION_15
-        targetCompatibility = JavaVersion.VERSION_15
-    }
-}
-
-task jacocoRootReport(type: JacocoReport) {
-    description = 'Generates an aggregate report from all subprojects'
-    dependsOn = subprojects.test
-    additionalSourceDirs.setFrom files(subprojects.sourceSets.main.allSource.srcDirs)
-    sourceDirectories.setFrom files(subprojects.sourceSets.main.allSource.srcDirs)
-    classDirectories.setFrom files(subprojects.sourceSets.main.output)
-    executionData.setFrom project.fileTree(dir: '.', include: '**/build/jacoco/test.exec')
-    reports {
-        html.enabled = true
-        csv.enabled true
-        xml.enabled = true
-    }
-    onlyIf = {
-        true
+        compileOnly "org.projectlombok:lombok:${lombokVersion}"
+        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     }
 }
